--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^14.2.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "nodemon": "^2.0.20",
     "rxjs": "~7.5.0",
     "socket.io": "^4.5.3",
