--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "atomic-file": "^2.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase": "^9.15.0",
     "jest": "^29.3.1",
     "moment": "^2.29.4",
     "nodemon": "^2.0.20",
